--- a/Cisneros_Cahueñas_Puga_Notes.csproj
+++ b/Cisneros_Cahueñas_Puga_Notes.csproj
@@ -20,7 +20,7 @@
         <Nullable>enable</Nullable>
 
         <!-- Display name -->
-        <ApplicationTitle>Cisneros_Notes</ApplicationTitle>
+        <ApplicationTitle>Notes</ApplicationTitle>
 
         <!-- App Identifier -->
         <ApplicationId>com.companyname.cisneros_notes</ApplicationId>
