Cambios para windows

--- a/Cisneros_Cahueñas_Puga_Notes.csproj
+++ b/Cisneros_Cahueñas_Puga_Notes.csproj
@@ -37,6 +37,8 @@
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
         
         <MauiEnableXamlCBindingWithSourceCompilation>true</MauiEnableXamlCBindingWithSourceCompilation>
+        
+        <DefaultLanguage>es</DefaultLanguage>
     </PropertyGroup>
 
     <ItemGroup>
